[tool.poetry]
name = "mychild"
version = "0.1.0"
description = ""
authors = ["Samat Yunusov <samat.yunusov@ccsteam.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.2"
uvicorn = "^0.11.5"
fastapi = "^0.54.1"
databases = "^0.3.2"
tortoise-orm = "^0.16.10"
asyncpg = "^0.20.1"
psycopg2-binary = "^2.8.5"
passlib = "^1.7.2"
pyjwt = "^1.7.1"
bcrypt = "^3.1.7"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
flake8 = "^3.7.9"
mypy = "^0.770"
isort = "^4.3.21"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
